<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.orwen.hisport</groupId>
    <artifactId>hisport</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>hisport</name>
    <description>hisport</description>
    <properties>
        <java.version>17</java.version>
        <system.encoding>UTF-8</system.encoding>
        <project.build.sourceEncoding>${system.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${system.encoding}</project.reporting.outputEncoding>

        <redisson.version>3.17.0</redisson.version>
        <hikvision-client.version>1.1.3</hikvision-client.version>

        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>

        <appassembler-id>HisDataTransfer</appassembler-id>
        <appassembler-mainClass>com.orwen.hisport.Bootstrap</appassembler-mainClass>
        <application.runas>hisport</application.runas>
        <appassembler-maven-plugin.version>2.1.0</appassembler-maven-plugin.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>com.querydsl</groupId>
            <artifactId>querydsl-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson-spring-boot-starter</artifactId>
            <version>${redisson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-json</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-undertow</artifactId>
        </dependency>
        <dependency>
            <groupId>com.hikvision.ga</groupId>
            <artifactId>artemis-http-client</artifactId>
            <version>${hikvision-client.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.mysema.maven</groupId>
                <artifactId>apt-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.mysema.maven</groupId>
                    <artifactId>apt-maven-plugin</artifactId>
                    <version>${apt-maven-plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.querydsl</groupId>
                            <artifactId>querydsl-apt</artifactId>
                            <version>${querydsl.version}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <goals>
                                <goal>process</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>target/generated-sources/java</outputDirectory>
                                <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
                                <showWarnings>true</showWarnings>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>appassembler-maven-plugin</artifactId>
                    <version>${appassembler-maven-plugin.version}</version>
                    <configuration>
                        <repositoryName>lib</repositoryName>
                        <binFolder>bin</binFolder>
                        <configurationDirectory>conf</configurationDirectory>
                        <copyConfigurationDirectory>true</copyConfigurationDirectory>
                        <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
                        <repositoryLayout>flat</repositoryLayout>
                        <encoding>${system.encoding}</encoding>
                        <logsDirectory>logs</logsDirectory>
                        <tempDirectory>temp</tempDirectory>
                        <useWildcardClassPath>true</useWildcardClassPath>
                        <externalDeltaPackDirectory>${project.basedir}/site/wrapper</externalDeltaPackDirectory>
                        <daemons>
                            <daemon>
                                <id>${appassembler-id}</id>
                                <mainClass>${appassembler-mainClass}</mainClass>
                                <platforms>
                                    <platform>jsw</platform>
                                </platforms>
                                <jvmSettings>
                                    <extraArguments>
                                        <extraArgument>-Xmx4G</extraArgument>
                                        <extraArgument>-Xms2G</extraArgument>
                                        <extraArgument>-XX:+UseZGC</extraArgument>
                                        <extraArgument>-Dfile.encoding=${system.encoding}</extraArgument>
                                    </extraArguments>
                                </jvmSettings>
                                <generatorConfigurations>
                                    <generatorConfiguration>
                                        <generator>jsw</generator>
                                        <includes>
                                            <include>windows-x86-32</include>
                                            <include>windows-x86-64</include>
                                            <include>linux-x86-32</include>
                                            <include>linux-x86-64</include>
                                            <include>macosx-universal-64</include>
                                        </includes>
                                        <configuration>
                                            <property>
                                                <name>configuration.directory.in.classpath.first</name>
                                                <value>%APP_BASE%/conf</value>
                                            </property>
                                            <property>
                                                <name>run.as.user.envvar</name>
                                                <value>${application.runas}</value>
                                            </property>
                                            <property>
                                                <name>wrapper.logfile</name>
                                                <value>wrapper.log</value>
                                            </property>
                                            <property>
                                                <name>wrapper.logfile.maxsize</name>
                                                <value>128m</value>
                                            </property>
                                            <property>
                                                <name>wrapper.logfile.maxfiles</name>
                                                <value>16</value>
                                            </property>
                                        </configuration>
                                    </generatorConfiguration>
                                </generatorConfigurations>
                            </daemon>
                        </daemons>
                    </configuration>
                    <executions>
                        <execution>
                            <id>generate-jsw-scripts</id>
                            <phase>package</phase>
                            <goals>
                                <goal>generate-daemons</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
